--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,15 @@ chrono = "0.4.38"
 futures = "0.3.30"
 bson = {version = "2.13.0", features = ["chrono-0_4"]}
 mongodb = "3.1.0"
-reqwest = {version = "0.12.7", features = ["gzip", "json"]}
+reqwest = {version = "0.12.7", features = ["gzip", "json", "cookies"]}
 serde = { version = "1.0.210", features = ["derive"] }
 shuttle-actix-web = "0.47.0"
 shuttle-runtime = "0.47.0"
 tokio = "1.40.0"
 tracing = "0.1.40"
 async-trait = "0.1.82"
+imap = "3.0.0-alpha.14"
+mail-parser = "0.9.4"
+calamine = "0.25.0"
+tl = "0.7.8"
+regex = "1.10.6"
