--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,5 @@ regex = "1.10.6"
 serde_json = "1.0.135"
 uuid = { version = "1.11.0", features = ["serde"] }
 sqlx = { version = "0.8.3", features = ["postgres", "uuid", "chrono"] }
+rust-moysklad = "0.1.3"
+rust-woocommerce = "0.1.3"
