--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,14 @@ name = "friday-api"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "friday-api"
+
 [dependencies]
-shuttle-axum = "0.51"
 axum = "0.8"
 tower = "0.5.2"
 tower-http = { version = "0.6.2", features = ["trace", "timeout", "cors"] }
@@ -13,8 +19,8 @@ bytes = "1.9.0"
 chrono = { version = "0.4.38", features = ["serde"] }
 reqwest = { version = "0.12.7", features = ["gzip", "json", "cookies"] }
 serde = { version = "1.0.210", features = ["derive"] }
-shuttle-runtime = "0.51"
-shuttle-shared-db = { version = "0.51", features = ["sqlx", "postgres"] }
+shuttle-runtime = "0.52"
+shuttle-shared-db = { version = "0.52", features = ["sqlx", "postgres"] }
 tokio = "1.40.0"
 tracing = "0.1.40"
 imap = "3.0.0-alpha.14"
@@ -23,7 +29,8 @@ calamine = "0.26.1"
 tl = "0.7.8"
 regex = "1.10.6"
 serde_json = "1.0.135"
-uuid = { version = "1.11.0", features = ["serde"] }
+uuid = { version = "1.11.0", features = ["serde", "v4"] }
 sqlx = { version = "0.8.3", features = ["postgres", "uuid", "chrono"] }
 rust-moysklad = "0.1.3"
 rust-woocommerce = "0.1.3"
+anyhow = "1.0.95"
