--- a/compose.yaml
+++ b/compose.yaml
@@ -1,16 +1,15 @@
 services:
   server:
     environment:
-      - ORTGRAPH_USERNAME=info@floorstudio.ru
-      - ORTGRAPH_PASSWORD=4lp3B7
-      - MAIL_HOST=mail.safira.club
-      - MAIL_USER=mail@safira.club
-      - MAIL_PASS=80ORbD4s7Sj5ukUV
-      - MS_TOKEN=6c5060f77e856df689f4d52419a607a3ac4f2e42
-      - SAFIRA_CK=ck_9584ef901debf952fbfd8a2f43c5f94901613a89
-      - SAFIRA_CS=cs_a3d2902f8b5f819e8473309df7c041ea1f16fc0e
-      - SAFIRA_HOST=https://safira.club
-      - WINSTON_TOKEN=6541293177:AAE4B6ZRD96g3tFvPI1GsiDhMsbIyglmNfs
+      - ORTGRAPH_USERNAME=${ORTGRAPH_USERNAME}
+      - ORTGRAPH_PASSWORD=${ORTGRAPH_PASSWORD}
+      - MAIL_HOST=${MAIL_HOST}
+      - MAIL_USER=${MAIL_USER}
+      - MAIL_PASS=${MAIL_PASS}
+      - MS_TOKEN=${MS_TOKEN}
+      - SAFIRA_CK=${SAFIRA_CK}
+      - SAFIRA_CS=${SAFIRA_CS}
+      - SAFIRA_HOST=${SAFIRA_HOST}
       - DATABASE_URL=postgres://postgres:postgres@database:5432/friday_api
     build:
       context: .
