--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,32 +7,29 @@ edition = "2021"
 path = "src/lib.rs"
 
 [[bin]]
-path = "src/main.rs"
 name = "friday-api"
+path = "src/main.rs"
 
 [dependencies]
+anyhow = "1"
 axum = "0.8"
-tower-http = { version = "0.6", features = ["trace", "timeout", "cors"] }
-http = "1.3"
 bytes = "1.10"
+calamine = "0.29"
 chrono = { version = "0.4", features = ["serde"] }
-reqwest = { version = "0.12", features = ["gzip", "json", "cookies"] }
-serde = { version = "1", features = ["derive"] }
-tokio = "1.47"
-tracing = "0.1"
+derive_builder = "0.20"
+http = "1.3"
 imap = "3.0.0-alpha.9"
 mail-parser = "0.11"
-calamine = "0.29"
-tl = "0.7"
 regex = "1.11"
-serde_json = "1"
-uuid = { version = "1.17", features = ["serde", "v4"] }
-sqlx = { version = "0.8", features = ["postgres", "uuid", "chrono"] }
+reqwest = { version = "0.12", features = ["cookies", "gzip", "json"] }
 rust-moysklad = "0.1.3"
 rust-woocommerce = "0.1.3"
-anyhow = "1"
-teloxide = { git = "https://github.com/teloxide/teloxide/", features = [
-    "full",
-] }
-derive_builder = "0.20"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+sqlx = { version = "0.8", features = ["chrono", "postgres", "uuid", "runtime-tokio", "tls-rustls"] }
+tl = "0.7"
+tokio = "1.47"
+tower-http = { version = "0.6", features = ["cors", "timeout", "trace"] }
+tracing = "0.1"
 tracing-subscriber = "0.3"
+uuid = { version = "1.17", features = ["serde", "v4"] }
